--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -3,11 +3,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:clipChildren="false"
+        style="@style/ContainerScreen"
         android:clipToPadding="false"
-        android:padding="24dp"
         tools:context=".ui.search.SearchFragment">
 
         <ImageView
@@ -23,6 +20,8 @@
         <TextView
             android:id="@+id/tv_location_search"
             style="@style/TextBody.Bold.BodyLarge"
+            android:maxLines="2"
+            android:ellipsize="end"
             android:layout_width="0dp"
             android:layout_marginTop="24dp"
             tools:text="Berkoh, Purwokerto Selatan \nBanyumas"
@@ -43,18 +42,33 @@
             app:queryHint="@string/search_organizer"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_location_search" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_location_search" >
+
+        </androidx.appcompat.widget.SearchView>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_search"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/search_view"
         app:layout_constraintStart_toStartOf="@+id/search_view"
         app:layout_constraintTop_toBottomOf="@+id/search_view"
         tools:listitem="@layout/item_search"
         />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:indeterminateTint="@color/green_40"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/search_view"
+        app:layout_constraintStart_toStartOf="@+id/search_view"
+        app:layout_constraintTop_toBottomOf="@+id/search_view"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
