--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -3,6 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginVertical="8dp"
+    android:layout_marginHorizontal="4dp"
+    android:clipToPadding="false"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardCornerRadius="8dp"
@@ -16,15 +18,15 @@
         <ImageView
             android:id="@+id/iv_mosque"
             android:layout_width="106dp"
-            android:layout_height="0dp"
+            android:layout_height="106dp"
             android:background="@drawable/bg_rounded_8dp"
             android:clipToOutline="true"
             android:scaleType="centerCrop"
             android:src="@drawable/dummy_mosque"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:targetApi="s" />
+            tools:targetApi="s"
+            android:contentDescription="Mosque" />
 
 
         <TextView
@@ -43,6 +45,7 @@
             android:layout_width="0dp"
             android:textColor="@color/grey_40"
             android:layout_marginTop="4dp"
+            android:maxLines="2"
             app:layout_constraintStart_toStartOf="@+id/tv_event"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_event"
